# pygraphdb

./: .gitignore  001_Cypher_engine_refactor_plan.md  README.md  api.html  benchmarks.py  cypher.html  example.py  genindex.html  get_coverage_badge.sh  index.html  installation.html  missing_graphdb_features.md  notebooks.html  objects.inv  performance.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  serializers.html  storage-backends.html  test.py  typed-sampling.html
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/pygraphdb/: cypher.html  graphdb.html  ingestion.html  kvstores.html  sampling.html  serializers.html
_sources/: api.rst.txt  cypher.rst.txt  index.rst.txt  installation.rst.txt  performance.rst.txt  quickstart.rst.txt  serializers.rst.txt  storage-backends.rst.txt
assets/: get_coverage_badge.sh
docs/: api.rst  arcadedb-benchmarks.rst  conf.py  cypher.rst  index.rst  installation.rst  notebooks.rst  performance.rst  quickstart.rst  storage-backends.rst  typed-sampling.rst
notebooks/: 01_graphdb_basics.ipynb  02_loading_large_graph.ipynb  03_property_graph_api.ipynb  04_typed_path_sampling.ipynb  05_columnar_ingestion_benchmark.ipynb
scripts/: benchmark_arcadedb_vs_pygraphdb.py  benchmark_matrix.py  benchmark_rocksdb_compaction.py  tune_rocksdb.py  update_coverage_badge.py
src/: graphdb.py  kvstores.py  serializers.py
src/pygraphdb/: __init__.py  cypher.py  cypher_ast.py  cypher_parser.py  cypher_plan.py  cypher_runtime.py  graphdb.py  ingestion.py  kvstores.py  sampling.py  serializers.py
tests/: conftest.py  test_cypher.py  test_graphdb_interfaces.py  test_ingestion.py  test_kvstores.py  test_optional_dependencies.py  test_sampling.py  test_serializers.py  test_typed_traversal.py
