[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pygraphdb"
version = "0.1.0"
description = "A pure Python GraphDB for attributed graphs."
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "plyvel>=1.5.1",
]

[project.optional-dependencies]
lmdb = ["lmdb"]
leveldb = ["plyvel"]
msgpack = ["msgpack"]
protobuf = ["protobuf"]
bloom = ["pybloom-live"]
coverage = ["coverage"]
docs = ["furo", "myst-parser", "sphinx"]
all = ["lmdb", "msgpack", "plyvel", "protobuf", "pybloom-live"]
dev = ["coverage", "furo", "lmdb", "msgpack", "myst-parser", "plyvel", "protobuf", "pybloom-live", "sphinx"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "coverage>=7.10.7",
]
