[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pygraphdb"
version = "0.2.0a0"
description = "A pure Python GraphDB for attributed graphs."
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "google>=3.0.0",
    "msgpack>=1.1.2",
    "plyvel>=1.5.1",
    "protobuf>=6.33.6",
]

[project.optional-dependencies]
lmdb = ["lmdb"]
leveldb = ["plyvel"]
msgpack = ["msgpack"]
protobuf = ["protobuf"]
bloom = ["pybloom-live"]
coverage = ["coverage", "pytest"]
docs = ["furo", "myst-parser", "sphinx"]
rocksdb = ["pyrex-rocksdb>=0.3.0a0"]
arrow = ["pyarrow"]
polars = ["polars", "pyarrow"]
fast-ingest = ["pyarrow", "polars", "pyrex-rocksdb>=0.3.0a0"]
all = ["lmdb", "msgpack", "plyvel", "protobuf", "pybloom-live", "pyrex-rocksdb>=0.3.0a0", "pyarrow", "polars"]
dev = ["coverage", "furo", "lmdb", "msgpack", "myst-parser", "plyvel", "protobuf", "pybloom-live", "pyrex-rocksdb>=0.3.0a0", "pyarrow", "polars", "pytest", "sphinx"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "pytest>=8.0",
]
